--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -3,5 +3,5 @@ Options +FollowSymlinks
 
 RewriteBase /
 RewriteRule ^$ index.php [QSA,L]
-RewriteRule ^/?docs/([a-zA-Z0-9\-_\ ]*)$ docs.php?view=$1 [QSA,L]
+RewriteRule ^/?docs/([a-zA-Z0-9\-_!\?\ ]*)$ docs.php?view=$1 [QSA,L]
 RewriteRule ^/?([a-zA-Z0-9\-_]+)$ $1.php [QSA,L]
